Stopped shifting deeply buried comments any more right

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,6 @@ body {
 p {
     margin: 0;
     padding: 0;
-    -webkit-margin-before: 0;
-    -webkit-margin-after: 0;
-    -webkit-margin-start: 0;
-    -webkit-margin-end: 0;
 }
 
 .text-very-muted {
